// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders a button with Pine background and default size and foreground 1`] = `
.c1 {
  background-color: #4A773C;
  color: #ffffff;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  padding: .6rem 1.4rem;
}

.c0 + .c0 {
  margin-left: 8px;
}

.c1:disabled {
  cursor: not-allowed;
}

<button
  class="c0 c1"
>
  I am a button with Pine background
</button>
`;

exports[`Renders a button with Pine foreground and default size and background 1`] = `
.c1 {
  background-color: #D73F09;
  color: #4A773C;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  padding: .6rem 1.4rem;
}

.c0 + .c0 {
  margin-left: 8px;
}

.c1:disabled {
  cursor: not-allowed;
}

<button
  class="c0 c1"
>
  I am a button with Pine foreground
</button>
`;

exports[`Renders a default button with orange background and white foreground 1`] = `
.c1 {
  background-color: #D73F09;
  color: #ffffff;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  padding: .6rem 1.4rem;
}

.c0 + .c0 {
  margin-left: 8px;
}

.c1:disabled {
  cursor: not-allowed;
}

<button
  class="c0 c1"
>
  I am a button
</button>
`;

exports[`Renders a large button with default colors 1`] = `
.c1 {
  background-color: #D73F09;
  color: #ffffff;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  padding: 1rem 1.8rem;
  font-size: 1.8rem;
}

.c0 + .c0 {
  margin-left: 8px;
}

.c1:disabled {
  cursor: not-allowed;
}

<button
  class="c0 c1"
>
  I am a large small button
</button>
`;

exports[`Renders a small button with default colors 1`] = `
.c1 {
  background-color: #D73F09;
  color: #ffffff;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  padding: .2rem .3rem;
  font-size: 1.4rem;
}

.c0 + .c0 {
  margin-left: 8px;
}

.c1:disabled {
  cursor: not-allowed;
}

<button
  class="c0 c1"
>
  I am a button small button
</button>
`;

exports[`Renders a super button with all the props changed: bg, fg, size 1`] = `
.c1 {
  background-color: #006A8E;
  color: #E9E5E4;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  padding: 1rem 1.8rem;
  font-size: 1.8rem;
}

.c0 + .c0 {
  margin-left: 8px;
}

.c1:disabled {
  cursor: not-allowed;
}

<button
  class="c0 c1"
>
  I am a super button
</button>
`;

exports[`Renders default CloseButton with the SVG close icon 1`] = `
.c3 {
  color: #7B746F;
  background-color: transparent;
}

.c1 {
  background-color: #D73F09;
  color: #ffffff;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  padding: .6rem 1.4rem;
}

.c0 + .c0 {
  margin-left: 8px;
}

.c1:disabled {
  cursor: not-allowed;
}

.c2 {
  color: #000000;
  background: transparent;
  padding: 1rem 2rem;
  font-size: 2.4rem;
}

<button
  class="c0 c1 c2 closeButton"
>
  <svg
    aria-hidden="true"
    class="svg-inline--fa fa-times fa-w-10 c3"
    data-icon="times"
    data-prefix="fal"
    focusable="false"
    role="img"
    viewBox="0 0 320 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
      fill="currentColor"
    />
  </svg>
  <span
    style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
  >
    Close
  </span>
</button>
`;
